--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,25 @@
 .buy-btn{
     margin-left: 60px;
 }
+.menu-title{
+    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+}
+.menu-para{
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+}
+.menu-txt{
+    margin-left: 30px;
+}
+.house{
+    margin-top: 16px;
+    border-radius: 20px;
+}
+.shop-img{
+    width: 589px;
+    margin-left: 40px;
+    margin-top: 30px;
+}
