--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 }
 .banner-image{
     width: 400px;
-    margin-left: 150px;
+    margin-left: 250px;
 }
 .w-jacket{
     font-family: 'Bebas Neue', cursive;
@@ -82,4 +82,13 @@
     width: 589px;
     margin-left: 40px;
     margin-top: 30px;
+}
+.shopping{
+    margin-bottom: 100px;
+}
+.foot{
+    background-color: black;
+    color: blanchedalmond;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
 }
